--- a/kaniko.yaml
+++ b/kaniko.yaml
@@ -1,23 +1,27 @@
-apiVersion: v1
-kind: Pod
+apiVersion: batch/v1
+kind: Job
 metadata:
   name: kaniko
 spec:
-  containers:
-  - name: kaniko
-    image: gcr.io/kaniko-project/executor:latest
-    args: 
-    - --context=git://github.com/acim/kaniko.git
-    - --destination=acim/kaniko:latest
-    volumeMounts:
-      - name: kaniko-secret
-        mountPath: /kaniko/.docker
-        readOnly: true
-  restartPolicy: Never
-  volumes:
-    - name: kaniko-secret
-      secret:
-        secretName: dockerhub
-        items:
-        - key: .dockerconfigjson
-          path: config.json
+  completions: 1
+  template:
+    spec:
+      restartPolicy: Never
+      containers:
+      - name: kaniko
+        image: gcr.io/kaniko-project/executor:latest
+        args: 
+        - --context=git://github.com/acim/kaniko.git
+        - --destination=acim/kaniko:latest
+        volumeMounts:
+          - name: kaniko-secret
+            mountPath: /kaniko/.docker
+            readOnly: true
+      restartPolicy: Never
+      volumes:
+        - name: kaniko-secret
+          secret:
+            secretName: dockerhub
+            items:
+            - key: .dockerconfigjson
+              path: config.json
