fix docker registry secret name

--- a/kaniko.yaml
+++ b/kaniko.yaml
@@ -21,7 +21,7 @@ spec:
       volumes:
         - name: kaniko-secret
           secret:
-            secretName: dockerhub
+            secretName: dockerhub-registry
             items:
             - key: .dockerconfigjson
               path: config.json
